--- a/1. Build a Passenger Counter App/28. Similar Project/index.html
+++ b/1. Build a Passenger Counter App/28. Similar Project/index.html
@@ -11,15 +11,15 @@
       <h1>Tickets Resolved Helper</h1>
     </header>
     <main>
-      <h4 class="current-user-msg">User: <span>2014310042</span> [ <span>Shadman Sakib</span> ] </h4>
+      <h4 class="current-user-msg">User: <span class="user_id"></span> [ <span id="fullName"></span> ] </h4>
       <br>
       <div class="counter card-body">
         <h2>Resolved Ticket Count</h2>
         <h2 id="count">00</h2>
         <h4 id="Session">Morning</h3>
         <div class="flex-row">
-          <button class="btn-main-1">Resolved ✔️</button>
-          <button class="btn-sec-1">End Session 💾</button>
+          <button class="btn-main-1" id="increment">Resolved ✔️</button>
+          <button class="btn-sec-1" id="save">End Session 💾</button>
         </div>
       </div>
     </main>
@@ -47,14 +47,14 @@
         </th>
       </tr>
       <tr>
-        <td>
-          2014310042
+        <td class="user_id">
+          00
         </td>
         <td>1/3/2024</td>
-        <td>00</td>
-        <td>00</td>
-        <td>00</td>
-        <td>00</td>
+        <td class="ses-m">00</td>
+        <td class="ses-a">00</td>
+        <td class="ses-e">00</td>
+        <td class="ses-t">00</td>
       </tr>
     </table>
     <br>
@@ -65,5 +65,6 @@
     <h4 class="hidden">Thanks for your Hardwork!</h4>
   </div>
 
+  <script src="script.js"></script>
   </body>
 </html>
