--- a/2. Practice time - part 1/06. Calculator challenge/index.html
+++ b/2. Practice time - part 1/06. Calculator challenge/index.html
@@ -1,17 +1,21 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <span id="num1-el"></span>
-        <span id="num2-el"></span>
-        <br>
-        <button>Add</button>
-        <button>Subtract</button>
-        <button>Divide</button>
-        <button>Multiply</button>
-        <br>
-        <span id="sum-el">Sum: </span>
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <input type="number" id="num1-el" />
+    <input type="number" id="num2-el" />
+    <br />
+    <button id="add-btn">Add</button>
+    <button id="sub-btn">Subtract</button>
+    <button id="div-btn">Divide</button>
+    <button id="mul-btn">Multiply</button>
+    <br />
+    <span id="sum-el">00</span>
+    <script src="index.js"></script>
+  </body>
 </html>
