--- a/3. Build a Blackjack game/17. New card button/index.html
+++ b/3. Build a Blackjack game/17. New card button/index.html
@@ -1,14 +1,21 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <h1>Blackjack</h1>
-        <p id="message-el">Want to play a round?</p>
-        <p id="cards-el">Cards:</p>
-        <p id="sum-el">Sum:</p>
-        <button onclick="startGame()">START GAME</button>
-        <!-- 1. Create a NEW CARD button, make it run newCard() on click -->
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <h1>Blackjack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p id="cards-el">Cards:</p>
+    <p id="sum-el">Sum:</p>
+    <div class="flex-col-btn">
+      <button onclick="startGame()">START GAME</button>
+      <!-- 1. Create a NEW CARD button, make it run newCard() on click -->
+      <button onclick="newCard()">NEW CARD</button>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
